--- a/WORKSPACE/catkin_ws/src/assessment_package/package.xml
+++ b/WORKSPACE/catkin_ws/src/assessment_package/package.xml
@@ -45,6 +45,7 @@
   <depend>robot_localization</depend>
   <depend>fake_localization</depend>
   <depend>carrot_planner</depend>
+  <depend>tf2_ros</depend>
 
   <build_depend>message_generation</build_depend>
   <exec_depend>message_runtime</exec_depend>
